k8s/applications/business/stalwart/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  namespace: stalwart
spec:
  selector:
    app.kubernetes.io/name: stalwart
  ports:
    - { name: https, port: 443, targetPort: https }
    - { name: http, port: 8080, targetPort: mgmt }
    - { name: smtp, port: 25, targetPort: smtp }
    - { name: submission, port: 587, targetPort: submission }
    - { name: submissions, port: 465, targetPort: submissions }
    - { name: imap, port: 143, targetPort: imap }
    - { name: imaps, port: 993, targetPort: imaps }
    - { name: sieve, port: 4190, targetPort: sieve }
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - mail.smadja.dev
  rules:
    - backendRefs:
        - name: stalwart
          port: 8080
